# sm2SuitDamageMod

./: .gitignore  CMakeLists.txt  ModSettings.h  SuitDamageManager.cpp  SuitDamageManager.h  SuitHook.asm  buildscript.ps1  dllmain.cpp  hooking.h  info.json  logging.cpp  logging.h  menu.cpp  menu.h  scan.cpp  scan.h  utils.cpp  utils.h
game/: Actor.cpp  Actor.h  ActorHandle.h  Asset.h  AssetHash.cpp  AssetHash.h  AssetManager.cpp  AssetManager.h  Hash.cpp  Hash.h  HashTable.h  HeroSystem.cpp  HeroSystem.h  Localization.cpp  Localization.h  Native.cpp  Native.h  Transform.cpp  Transform.h
game/Component/: Component.h  ComponentHandle.h  ComponentRegistry.cpp  ComponentRegistry.h  Health.h
lib/: modsettings.lib
